--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <section class="title">
-        <img src="images/logo.png" alt="logo">
+        <img class="title__img" src="images/logo.png" alt="logo">
     </section>
 
     <section class="menu">
@@ -47,29 +47,45 @@
     </section>
 
     <section>
-        <div>
-            <img src="images/map.png" alt="ikona mapy">
-            <h4>Podpora na místě</h4>
-            <p>V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>
+        <div class="block">
+            <div class="block__icon">
+                <img src="images/map.png" alt="ikona mapy">
+            </div>
+            <div class="block__text"> 
+                <p class="block__title">Podpora na místě</p>
+                <p>V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>
+            </div>
         </div>
 
 
-        <div>
-            <img src="images/plane.png" alt="ikona letadla">
-            <h4>Služby na letišti</h4>
-            <p>Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
+        <div class="block">
+            <div class="block__icon">
+                <img src="images/plane.png" alt="ikona letadla">
+            </div>
+            <div class="block__text"> 
+                <p class="block__title">Služby na letišti</p>
+                <p>Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
+            </div>    
         </div>
 
-        <div>
-            <img src="images/globe.png" alt="ikona globu">
-            <h4>Do celého světa</h4>
-            <p>Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
+        <div class="block">
+            <div class="block__icon">
+                <img src="images/globe.png" alt="ikona globu">
+            </div>
+            <div class="block__text">
+                <p class="block__title">Do celého světa</p>
+                <p>Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
+            </div>
         </div>
 
-        <div>
-            <img src="images/shield.png" alt="ikona stitu">
-            <h4>Vaše bezpečí</h4>
-            <p>Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.</p>
+        <div class="block">
+            <div class="block__icon">
+                <img src="images/shield.png" alt="ikona stitu">
+            </div>
+            <div class="block__text">
+                <p class="block__title">Vaše bezpečí</p>
+                <p>Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.</p>
+            </div>
         </div>
     </section>
 
@@ -78,7 +94,7 @@
         <figure class="foto">
             <img class="foto__img" src="images/lodicka.png" alt="foto jezera">
             <figcaption class="foto__price">15 900 Kč</figcaption>
-            <figcaption class="foto__title--big">Romantika u horského jezera</figcaption>
+            <figcaption class="foto__title--big2">Romantika u horského jezera</figcaption>
             <figcaption class="foto__text">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</figcaption>
         </figure>
 
@@ -98,29 +114,27 @@
 
     <section>
         <h2>Novinky</h2>
-        <div>
-            <p>15. 8. 2020</p>
-            <h4>Magický Zanzibar</h4>
-            <p>VZanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.</p>
+        <div class="news">
+            <p class="news__date">15. 8. 2020</p>
+            <p class="news__title" >Magický Zanzibar</p>
+            <p class="news__text">Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.</p>
         </div>
 
 
-        <div>
-            <p>31. 9. 2020</p>
-            <h4>Návrat českých občanů ze zahraničí</h4>
-            <p>Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření Ministerstva zdravotnictví ČR.</p>
+        <div class="news">
+            <p class="news__date">31. 9. 2020</p>
+            <p class="news__title">Návrat českých občanů ze zahraničí</p>
+            <p class="news__text">Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření Ministerstva zdravotnictví ČR.</p>
         </div>
 
-        <div>
-            <p>6. 10. 2020</p>
-            <h4>Na Kubu s PCR testem</h4>
-            <p>Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před příletem do destinace.</p>
+        <div class="news">
+            <p class="news__date">6. 10. 2020</p>
+            <p class="news__title">Na Kubu s PCR testem</p>
+            <p class="news__text">Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před příletem do destinace.</p>
         </div>
     </section>
 
-    <footer>
-        <p>©2021, Czechitas</p>
-    </footer>
+    <footer class="footer">©2021, Czechitas</footer>
 
 </body>
 </html>
