--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </section>
 
     <section class="menu">
-        <li class="menu__item">Last minute</li>
-        <li class="menu__item">Destinace</li>
-        <li class="menu__item--selected">Časté otázky</li>
+        <a href="" class="menu__item">Last minute</a>
+        <a href=""  class="menu__item">Destinace</a>
+        <a href=""  class="menu__item">Časté otázky</a>
     </section>
 
     <section>
