--- a/index.html
+++ b/index.html
@@ -14,125 +14,125 @@
 
 <body class="body">
 
+    <header class="header">
+        <section class="title">
+            <img class="title__img" src="images/logo.png" alt="logo">
+        </section>
 
-    <section class="title">
-        <img class="title__img" src="images/logo.png" alt="logo">
-    </section>
+        <section class="menu">
+            <a href="" class="menu__item">Last minute</a>
+            <a href=""  class="menu__item">Destinace</a>
+            <a href=""  class="menu__item">Časté otázky</a>
+        </section>
+    </header>
 
-    <section class="menu">
-        <a href="" class="menu__item">Last minute</a>
-        <a href=""  class="menu__item">Destinace</a>
-        <a href=""  class="menu__item">Časté otázky</a>
-    </section>
+    <figure class="foto foto--big">
+        <img class="foto__img--big" src="images/palmy.png" alt="foto plaz">
+        <figcaption class="foto__price">17 600 Kč</figcaption>
+        <figcaption class="foto__title--big">Pohoda pod palmami</figcaption>
+        <figcaption class="foto__text">Nejlepší dovolená pro nejvíc nejlínější lidi na světě</figcaption>
+    </figure>
 
-    <section>
-        <figure class="foto">
-            <img class="foto__img" src="images/palmy.png" alt="foto plaz">
-            <figcaption class="foto__price">17 600 Kč</figcaption>
-            <figcaption class="foto__title--big">Pohoda pod palmami</figcaption>
-            <figcaption class="foto__text">Nejlepší dovolená pro nejvíc nejlínější lidi na světě</figcaption>
-        </figure>
+    <figure class="foto">
+        <img class="foto__img--small" src="images/jezero2.png" alt="foto jezera">
+        <figcaption class="foto__price">8 490 Kč</figcaption>
+        <figcaption class="foto__title--small">Klid u jezera</figcaption>
+    </figure>
 
-        <figure class="foto">
-            <img class="foto__img" src="images/jezero2.png" alt="foto jezera">
-            <figcaption class="foto__price">8 490 Kč</figcaption>
-            <figcaption class="foto__title--small">Klid u jezera</figcaption>
-        </figure>
+    <figure class="foto">
+        <img class="foto__img--small" src="images/nakole.png" alt="foto krajinky">
+        <figcaption class="foto__price">4 990 Kč</figcaption>
+        <figcaption class="foto__title--small">Výlet na kole</figcaption>
+    </figure>
+    
 
-        <figure class="foto">
-            <img class="foto__img" src="images/nakole.png" alt="foto krajinky">
-            <figcaption class="foto__price">4 990 Kč</figcaption>
-            <figcaption class="foto__title--small">Výlet na kole</figcaption>
-        </figure>
-    </section>
-
-    <section>
-        <div class="block">
-            <div class="block__icon">
-                <img src="images/map.png" alt="ikona mapy">
-            </div>
-            <div class="block__text"> 
-                <p class="block__title">Podpora na místě</p>
-                <p>V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>
-            </div>
+   
+    <div class="block">
+        <div class="block__icon">
+            <img src="images/map.png" alt="ikona mapy">
         </div>
-
-
-        <div class="block">
-            <div class="block__icon">
-                <img src="images/plane.png" alt="ikona letadla">
-            </div>
-            <div class="block__text"> 
-                <p class="block__title">Služby na letišti</p>
-                <p>Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
-            </div>    
+        <div class="block__text"> 
+            <p class="block__title">Podpora na místě</p>
+            <p>V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>
         </div>
+    </div>
 
-        <div class="block">
-            <div class="block__icon">
-                <img src="images/globe.png" alt="ikona globu">
-            </div>
-            <div class="block__text">
-                <p class="block__title">Do celého světa</p>
-                <p>Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
-            </div>
+
+    <div class="block">
+        <div class="block__icon">
+            <img src="images/plane.png" alt="ikona letadla">
         </div>
+        <div class="block__text"> 
+            <p class="block__title">Služby na letišti</p>
+            <p>Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
+        </div>    
+    </div>
 
-        <div class="block">
-            <div class="block__icon">
-                <img src="images/shield.png" alt="ikona stitu">
-            </div>
-            <div class="block__text">
-                <p class="block__title">Vaše bezpečí</p>
-                <p>Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.</p>
-            </div>
+    <div class="block">
+        <div class="block__icon">
+            <img src="images/globe.png" alt="ikona globu">
         </div>
-    </section>
-
-    <section>
-        <h2>Last minute zájezdy</h2>
-        <figure class="foto">
-            <img class="foto__img" src="images/lodicka.png" alt="foto jezera">
-            <figcaption class="foto__price">15 900 Kč</figcaption>
-            <figcaption class="foto__title--big2">Romantika u horského jezera</figcaption>
-            <figcaption class="foto__text">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</figcaption>
-        </figure>
-
-
-        <figure class="foto">
-            <img class="foto__img" src="images/podkova.png" alt="foto hory">
-            <figcaption class="foto__price">18 500 Kč</figcaption>
-            <figcaption class="foto__title--small">Grand Canyon</figcaption>
-        </figure>
-
-        <figure class="foto">
-            <img class="foto__img" src="images/zatoka.png" alt="foto ostrova">
-            <figcaption class="foto__price">8 900 Kč</figcaption>
-            <figcaption class="foto__title--small">Pěšky po Kanárských ostrovech</figcaption>
-        </figure>
-    </section>
-
-    <section>
-        <h2>Novinky</h2>
-        <div class="news">
-            <p class="news__date">15. 8. 2020</p>
-            <p class="news__title" >Magický Zanzibar</p>
-            <p class="news__text">Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.</p>
+        <div class="block__text">
+            <p class="block__title">Do celého světa</p>
+            <p>Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
         </div>
+    </div>
 
-
-        <div class="news">
-            <p class="news__date">31. 9. 2020</p>
-            <p class="news__title">Návrat českých občanů ze zahraničí</p>
-            <p class="news__text">Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření Ministerstva zdravotnictví ČR.</p>
+    <div class="block">
+        <div class="block__icon">
+            <img src="images/shield.png" alt="ikona stitu">
         </div>
-
-        <div class="news">
-            <p class="news__date">6. 10. 2020</p>
-            <p class="news__title">Na Kubu s PCR testem</p>
-            <p class="news__text">Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před příletem do destinace.</p>
+        <div class="block__text">
+            <p class="block__title">Vaše bezpečí</p>
+            <p>Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.</p>
         </div>
-    </section>
+    </div>
+
+
+
+    <h2>Last minute zájezdy</h2>
+    <figure class="foto foto--big">
+        <img class="foto__img--big" src="images/lodicka.png" alt="foto jezera">
+        <figcaption class="foto__price">15 900 Kč</figcaption>
+        <figcaption class="foto__title--big2">Romantika u horského jezera</figcaption>
+        <figcaption class="foto__text">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</figcaption>
+    </figure>
+
+
+    <figure class="foto">
+        <img class="foto__img--small" src="images/podkova.png" alt="foto hory">
+        <figcaption class="foto__price">18 500 Kč</figcaption>
+        <figcaption class="foto__title--small">Grand Canyon</figcaption>
+    </figure>
+
+    <figure class="foto">
+        <img class="foto__img--small" src="images/zatoka.png" alt="foto ostrova">
+        <figcaption class="foto__price">8 900 Kč</figcaption>
+        <figcaption class="foto__title--small">Pěšky po Kanárských ostrovech</figcaption>
+    </figure>
+
+
+
+    <h2>Novinky</h2>
+    <div class="news">
+        <p class="news__date">15. 8. 2020</p>
+        <p class="news__title" >Magický Zanzibar</p>
+        <p class="news__text">Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.</p>
+    </div>
+
+
+    <div class="news">
+        <p class="news__date">31. 9. 2020</p>
+        <p class="news__title">Návrat českých občanů ze zahraničí</p>
+        <p class="news__text">Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření Ministerstva zdravotnictví ČR.</p>
+    </div>
+
+    <div class="news">
+        <p class="news__date">6. 10. 2020</p>
+        <p class="news__title">Na Kubu s PCR testem</p>
+        <p class="news__text">Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před příletem do destinace.</p>
+    </div>
+  
 
     <footer class="footer">©2021, Czechitas</footer>
 
