--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Open+Sans&display=swap" rel="stylesheet"> 
 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="body">
@@ -33,20 +33,18 @@
         <figcaption class="foto__text">Nejlepší dovolená pro nejvíc nejlínější lidi na světě</figcaption>
     </figure>
 
-    <figure class="foto">
+    <figure class="foto foto--small">
         <img class="foto__img--small" src="images/jezero2.png" alt="foto jezera">
         <figcaption class="foto__price">8 490 Kč</figcaption>
         <figcaption class="foto__title--small">Klid u jezera</figcaption>
     </figure>
 
-    <figure class="foto">
+    <figure class="foto foto--small">
         <img class="foto__img--small" src="images/nakole.png" alt="foto krajinky">
         <figcaption class="foto__price">4 990 Kč</figcaption>
         <figcaption class="foto__title--small">Výlet na kole</figcaption>
     </figure>
-    
 
-   
     <div class="block">
         <div class="block__icon">
             <img src="images/map.png" alt="ikona mapy">
@@ -56,7 +54,6 @@
             <p>V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>
         </div>
     </div>
-
 
     <div class="block">
         <div class="block__icon">
@@ -87,30 +84,28 @@
             <p>Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.</p>
         </div>
     </div>
-
+    
 
 
     <h2>Last minute zájezdy</h2>
-    <figure class="foto foto--big">
+    <figure class="foto foto--big right">
         <img class="foto__img--big" src="images/lodicka.png" alt="foto jezera">
         <figcaption class="foto__price">15 900 Kč</figcaption>
-        <figcaption class="foto__title--big2">Romantika u horského jezera</figcaption>
+        <figcaption class="foto__title--big">Romantika u horského jezera</figcaption>
         <figcaption class="foto__text">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</figcaption>
     </figure>
 
-
-    <figure class="foto">
+    <figure class="foto foto--small left">
         <img class="foto__img--small" src="images/podkova.png" alt="foto hory">
         <figcaption class="foto__price">18 500 Kč</figcaption>
         <figcaption class="foto__title--small">Grand Canyon</figcaption>
     </figure>
 
-    <figure class="foto">
+    <figure class="foto foto--small left">
         <img class="foto__img--small" src="images/zatoka.png" alt="foto ostrova">
         <figcaption class="foto__price">8 900 Kč</figcaption>
         <figcaption class="foto__title--small">Pěšky po Kanárských ostrovech</figcaption>
     </figure>
-
 
 
     <h2>Novinky</h2>
@@ -119,7 +114,6 @@
         <p class="news__title" >Magický Zanzibar</p>
         <p class="news__text">Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.</p>
     </div>
-
 
     <div class="news">
         <p class="news__date">31. 9. 2020</p>
